pocket-calculator.css
* {
  position: relative;
}

@font-face {
  font-family: "Digital-7";
  src: url("fonts/digital-7.ttf") format("truetype");
}

@font-face {
  font-family: "Cornerstone";
  src: url("fonts/cornerstone.ttf") format("truetype");
}

@font-face {
    font-family: "Orena";
    src: url("fonts/orena.ttf") format("truetype");
}

body {
  text-align: center;
  font-weight: bold;
  font-size: 12pt;
  background-image: url("image/heic1509a_0.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

/* fun fact: #FFF8E7 is known as "cosmic latte" and is the average color of the universe as gathered from analyses of light from over 200,000 galaxies.*/
body > h1, h3 {
  color: #FFF8E7;
  font-family: "Orena";
  margin-bottom: -15px;
}

span.header1 {
  line-height: 1.5;;
  color: #FFF8E7;
  margin-bottom: -40px;
}

th > button#invisible {
  visibility: hidden;
  margin-bottom: -8px;
  height: 0.2px;
}

td > button.invisible {
  position: relative;
  visibility: hidden;
  height: 1px;
  width: 1px;
  display: block;
  z-index: 2;
}

td#calcDisplay {
  transform: scale(100%);
  background-color: rgba(0,0,0,0.8);
  color: #FFF8E7;
  text-align: right;
  border-radius: 12.5px;
  margin-top: 5px;
  margin-left: 10px;
  margin-right: 10px;
  height: 100px;
  font-family: "Digital-7";
  font-size: 100px;
}

table#calculator {
  text-align: right;
  transform: scale(0.7);
  margin-top: -90px;
  margin-left: auto;
  margin-right: auto;
  background-color: rgba(0,0,0,0);
  border-radius: 20px;
  border-bottom: 25px;
}

td.left {
  margin-left: 50px;
  margin-right: 5px;
}

td.middle {
  margin-left: 5px;
  margin-right: 5px;
}

td.right {
  margin-left: 5px;
  margin-right: 50px
}

button {
  font-family: "Cornerstone";
  font-size: 36px;
  height: 100px;
  width: 150px;
  color: #FFF8E7;
  background-color: #19b2ff;
  text-align: center;
  align-items: center;
  border-width: 2px;
  border-style: solid;
  border-spacing: 25px;
  border-color: #343434;
  border-radius: 5px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 10px;
  margin-right: 10px;
  box-shadow: 0 5px #004466;
  font-size: 50px;
}

td > button.operation {
  background-color: #512888;
  box-shadow: 0 5px #301851;
}

button.needsbold {
  font-weight: 700;
}

td > button#zero {
  width: 190%;
  margin-right: 46px;
}

td > button#decimal {
  margin-right: -25px;
}

td > button#subtraction {
  vertical-align: text-top
}

td > button.paran {
  width: 190%;
  background-color: #512888;
  box-shadow: 0 5px #301851;
}

td > button#paranleft {
  align-content: left;
}

button:focus {
  outline: 0;
}

button:hover {
  transition: color ease 0.5s;
}

button.operation:hover {
  background-color: #301851;
}

button.nonzero:hover {
  background-color: #004466;
}

button#zero:hover {
  background-color: #004466;
}

button.paran:hover {
  background-color: #301851;
}

